--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
+    "eslint": "^4.2.0",
+    "eslint-config-udacity": "^1.3.0",
+    "eslint-plugin-import": "^2.7.0",
+    "babel-eslint": "^7.2.3",
     "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint ./**/*.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
