--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "eslint": "^4.2.0",
     "eslint-config-udacity": "^1.3.0",
     "eslint-plugin-import": "^2.7.0",
-    "babel-eslint": "^7.2.3",
     "react-scripts": "1.0.10"
   },
   "scripts": {
